2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Invoke define-release.sh to set RELEASE, LOGDIR
	and RESDIR environment variables and create $LOGDIR and $RESDIR
	directories if necessary.
	* build-elf32.sh, build-uclib.sh: Use RELEASE environment variable
	for all release specific files/directories, use LOGDIR as directory
	for log files. Correct operator in test for PDF generation.
	* define-release.sh: New script.
	* run-elf32-tests.sh, run-uclibc-tests.sh: Use RELEASE environment
	variable for all release specific files/directories, use LOGDIR as
	directory for log files, use RESDIR as directory for all results
	sub-directories

2013-03-27  Anton Kolesov <anton.kolesov@synopsys.com>

	* build-uclibc.sh: Ignore error which happens when running 'make
	distclean' on uClibc.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add option to generate PDF manuals.
	* build-elf32.sh, build-uclibc.sh: Optionaly build PDF
	manuals. Tidy up commenting.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* README.md: Updated for 4.8 dev release.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh, arc-versions.sh, build-all.sh: Update copyright.
	* build-cleanup.sh, build-elf32.sh, build-elf32.sh: Likewise.
	* build-uclibc.sh, run-elf32-tests.sh, run-tests.sh: Likewise.
	* run-uclibc-tests.sh: Likewise.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* check-results.sh: New script.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Renamed options --linux to --uclibc and --no-linux
	to --no-uclibc and changed associated variable from linux to
	uclibc throughout.
	* run-uclibc-tests.sh: Renamed bd_linux as bd_uclibc,
	logfile_linux as logfile_uclibc and res_linux as res_uclibc
	throughout. Use uclibc instead of linux in logfile and results
	file names.
	* symlink-trunks.sh: Deleted.

2013-03-27  Jeremy Bennett <jeremy.bennett@embecosm.com>
